chore: prepare IO utils for update