@@ -2,7 +2,12 @@ package com.isthisalis.recore.util;
 
 import java.nio.file.Path;
 
+import org.lwjgl.glfw.GLFWImage;
+import org.lwjgl.stb.STBImage;
+import org.lwjgl.system.MemoryStack;
+
 import java.nio.ByteBuffer;
+import java.nio.IntBuffer;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 
@@ -13,7 +18,7 @@ import java.io.IOException;
  */
 public class NIO {
 
-  private static Logging log = new Logging("ReCore");
+  private static Logging log = new Logging(NIO.class.getName());
 
 
   public static Path makePath(String path) {
@@ -56,7 +61,10 @@ public class NIO {
 
   public static ByteBuffer loadByteBuffer(Path path) {
      try {
-      byte[] bytes = Files.readAllBytes(path);
+      byte[] bytes;
+      if (Files.exists(path)) bytes = Files.readAllBytes(path);
+      else bytes = NIO.class.getClassLoader().getResourceAsStream(path.toString()).readAllBytes();
+
       ByteBuffer bytedata = ByteBuffer.allocateDirect(bytes.length);
 
       bytedata.put(bytes);
@@ -65,17 +73,35 @@ public class NIO {
       return bytedata;
      } catch (IOException e) {
         log.error("Error in loadByteBuffer(): ", e);
-        return null;
+        return ByteBuffer.allocate(1);
      }
   }
 
 
-  public static boolean isDir(Path path) {
-    return Files.isDirectory(path);
-  }
+  public static GLFWImage loadGlfwImage(String path) {
+
+      MemoryStack stack = MemoryStack.stackPush();
+
+      // Loads and pushes icon image data to buffer.
+      ByteBuffer bytes = loadByteBuffer(Path.of(path));
+      
+      // Puts image data into IntBuffers
+      IntBuffer w = stack.mallocInt(1);
+      IntBuffer h = stack.mallocInt(1);
+      IntBuffer comp = stack.mallocInt(1);
 
 
-  public static boolean isFile(Path path) {
-    return Files.isRegularFile(path);
+      ByteBuffer pixels = STBImage.stbi_load_from_memory(bytes, w, h, comp, 4);
+
+      if (pixels == null) {
+        throw new RuntimeException("Unable to load icon: " + STBImage.stbi_failure_reason());
+      }
+
+      GLFWImage image = GLFWImage.malloc().set(w.get(0), h.get(0), pixels);
+
+      STBImage.stbi_image_free(pixels);
+      stack.close();
+
+      return image;
   }
 }
